# flowkey

./: CMakeLists.txt  CMakesList.txt  LICENSE  README.md
Client/: main.cpp
Core/: EventStructs.hpp  NetworkManager.cpp  NetworkManager.hpp
OS_Specific/Windows/: InputInterceptor.cpp  InputInterceptor.hpp
OS_Specific/macOS/: InputInjector.hpp  InputInjector.mm
Server/: main.cpp
build_mac/: CMakeCache.txt  FlowKey_Client  Makefile  cmake_install.cmake
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
